style individual session page to match other pages, make sure cell navigator plot control also shifts for smaller screen

--- a/ibl-frontend/frontend-content/src/app/cell-list/cell-list.component.css
+++ b/ibl-frontend/frontend-content/src/app/cell-list/cell-list.component.css
@@ -79,17 +79,17 @@ td span.oi {
     margin-left: 0;
 }
 
+.plots-navigator-buttons {
+    padding: 8px 5px;
+    border: 1px solid rgb(150, 150, 150);
+}
+
 .plots-navigator.minimize .plots-navigator-buttons {
     position: fixed;
     right: 0;
     bottom: 258px;
     padding-right: 16px;
     padding-left: 14px;
-}
-
-.plots-navigator-buttons {
-    padding: 8px 5px;
-    border: 1px solid rgb(150, 150, 150);
 }
 
 .plots-navigator-buttons span:hover {
@@ -251,13 +251,20 @@ td span.oi {
     margin-bottom: 8px;
 }
 
-/* M (768px and up) */
+
+@media only screen and (max-width: 768px) {
+
+}
+/* M (900 and down) */
 @media only screen and (max-width: 900px) {
     .plots-navigator {
         bottom: 200px;
     }
     .clusterListTable * {
         font-size: 0.72rem;
+    }
+    .plots-navigator.minimize .plots-navigator-buttons {
+        bottom: 28px;
     }
     
 } 
